修改默认配置

--- a/tools/hugo/site/config/_default/menus.yaml
+++ b/tools/hugo/site/config/_default/menus.yaml
@@ -1,10 +1,10 @@
 main:
   - name: About
     url: '#about'
-    weight: 1
-  - name: Posts
+    weight: 5
+  - name: Thinks
     url: /posts/
     weight: 2
-  - name: Docs
+  - name: Programming
     url: /docs/
     weight: 3
