--- a/tools/hugo/site/config/_default/config.yaml
+++ b/tools/hugo/site/config/_default/config.yaml
@@ -1,5 +1,5 @@
 baseURL: /
-title: Eureka Demo
+title: Bright's Blogs for github.io
 
 # Comment when installing using Hugo Modules
 theme: eureka
@@ -7,16 +7,15 @@ theme: eureka
 # theme: wangchucheng.com/hugo-eureka
 # If you cannot access the Github mirror, you can also use the Gitee mirror: gitee.com/wangchucheng/hugo-eureka
 
-paginate: 3
+paginate: 25
 copyright: >
-  &copy; 2021 <a href="https://www.wangchucheng.com/">C. Wang</a> and <a
-  href="https://www.ruiqima.com/">R. Ma</a>
+  &copy; 2021 <a href="http://brt2.gitee.io/blog/">Bright Li</a>
 enableEmoji: true
 enableGitInfo: false
 summaryLength: 75
 
-defaultContentLanguage: en
-hasCJKLanguage: false # Set `true` for Chinese/Japanese/Korean.
+defaultContentLanguage: zh
+hasCJKLanguage: true # Set `true` for Chinese/Japanese/Korean.
 defaultContentLanguageInSubdir: false
 
 # Uncomment for google analytics
@@ -29,7 +28,7 @@ markup:
     noClasses: false
   tableOfContents:
     startLevel: 2
-    endLevel: 6
+    endLevel: 5
     ordered: false
   goldmark:
     renderer:
