--- a/tools/hugo/site/config/_default/params.yaml
+++ b/tools/hugo/site/config/_default/params.yaml
@@ -1,5 +1,5 @@
 mainSections:
-  - posts
+  - docs
 description: Eureka is a elegant and powerful theme for Hugo.
 
 repoEditURL:
@@ -73,6 +73,6 @@ diagram:
   #   # You can list the key and value you want as below.
   #   # Because Hugo's config params are case-insensitive, you need to add `-` or `_` before the uppercase letters.
   #   # For example, `diagramPadding` should be written as `diagram-Padding` or other acceptable formats.
-  #   theme: 
+  #   theme:
   #   flowchart:
   #     diagram-padding:
