修改url路由地址，并添加对博客目录的软链接

--- a/tools/hugo/site/config/_default/menus.yaml
+++ b/tools/hugo/site/config/_default/menus.yaml
@@ -2,9 +2,9 @@ main:
   - name: About
     url: '#about'
     weight: 5
-  - name: Thinks
-    url: /posts/
+  - name: Articles
+    url: /articles/
     weight: 2
   - name: Programming
-    url: /docs/
+    url: /programming/
     weight: 3
